# data-science-from-scratch

./: .gitignore  README.md  requirements.txt  setup.py
solution/: pyproject.toml
solution/solution/: clustering.py  deep_learning.py  gradient_descent.py  inference.py  k_nearest_neighbors.py  logistic_regression.py  multiple_regression.py  naive_bayes.py  network_analysis.py  neural_networks.py  nlp.py  nlp_advanced.py  recommender_systems.py  simple_linear_regression.py  statistics.py  working_with_data.py
