[project]
name = "solution"
version = "0.0.1"
authors = [
  { name="Pavit Suwansiri", email="pavit.s@pantip.com" },
]
description = "My solution for Data Science from Scratch"
readme = "README.md"
requires-python = ">=3.9.15"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools"]